@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 SUBDIRS=t
 
-pkgdata_SCRIPTS = check-ldap-password ebox-init-ldap slapd.backup import-from-ldif list-slaves delete-slave slave-sync ebox-usercorner-apache2-start ebox-ad-sync ebox-pwdsync-server
+pkgdata_SCRIPTS = check-ldap-password slapd.backup import-from-ldif list-slaves delete-slave slave-sync ebox-usercorner-apache2-start ebox-ad-sync ebox-pwdsync-server
 pkgdata_DATA =  slapd.default slapd.default.no ebox-ad-sync.cron
 
 MAINTAINERCLEANFILES = Makefile.in
