@@ -1,4 +1,6 @@
 HEAD
+	+ Index uid and memberUid to avoid some warnings and improve performance,
+	  plus remove some old code and fix some broken one in that part of the code
 	+ Bugfix: disable edition of users and groups in ad-slave mode
 	+ Don't allow modification of ldap password in Mode model if
       it has been autogenerated by the eBox installer
